--- a/documentatie/bibliografie.bib
+++ b/documentatie/bibliografie.bib
@@ -53,3 +53,9 @@
     TITLE="Visual Classifier for Invasive Plant Speciess",
     YEAR="2017",
 }
+
+@misc{WEBSITE:5,
+  title = {Zebra Mussels Overwhelm U.S. Waterways in the Great Lakes Region and Beyond},
+  howpublished = {\url{https://www.copper.org/about/pressreleases/2009/pr2009_July_30.html/}},
+  note = {Accessed: 2018-01-03}
+}
