Added section about autoencoders

--- a/documentatie/bibliografie.bib
+++ b/documentatie/bibliografie.bib
@@ -59,3 +59,11 @@
   howpublished = {\url{https://www.copper.org/about/pressreleases/2009/pr2009_July_30.html/}},
   note = {Accessed: 2018-01-03}
 }
+
+@book{BOOK:2,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
