Added dataset section

--- a/documentatie/bibliografie.bib
+++ b/documentatie/bibliografie.bib
@@ -67,3 +67,9 @@
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+@misc{WEBSITE:6,
+  title = {Invasive Species Monitoring},
+  howpublished = {\url{https://www.kaggle.com/c/invasive-species-monitoring}},
+  note = {Accessed: 2018-01-04}
+}
