Added extra measurements

--- a/documentatie/proiect.tex
+++ b/documentatie/proiect.tex
@@ -1,10 +1,12 @@
 \documentclass{article}
 
-\usepackage{url}
+\usepackage{url} % urls in bibliography
 \usepackage{hyperref}
 
-\usepackage{graphicx}
+\usepackage{graphicx} % image in figures
 \usepackage{subcaption}
+
+\usepackage{amsmath} % equations
 
 \begin{document}
 \title{Detectia automata a speciilor invazive in imagini}
@@ -73,6 +75,7 @@ Pentru acest proiect am folosit setul de date aferent competitiei Invasive Speci
 
 \subsection{Abordarea 1}
 
+\subsubsection{Arhitectura}
 In primul rand am incercat sa determin cea mai potrivita arhitectura pentru autoencoder. Am rulat mai multe experimente, cu 1, 3 si 4 straturi de convolutie in modelul de codificare. Am observat ca acuratetea nu variaza foarte mult, deci am ales sa folosesc un singur strat de convolutie pentru simplitate.\ref{tab:arh}
 
 \begin{table}[h!]
@@ -89,6 +92,80 @@ In primul rand am incercat sa determin cea mai potrivita arhitectura pentru auto
       \end{tabular}
   \end{center}
 \end{table}
+
+\subsubsection{Imaginile}
+Dimensiunea imaginilor folosita la majoritatea experimentelor este de (200, 200). Aceasta a fost stabilita in functie de timpul de rulare al algoritmului. 
+
+Ruland algoritmul cu aceleasi configurari pe setari de culori diferite (alb-negru, color) nu am observat diferente in performanta.
+Cu configuratia (200, 200), pe un set de 1900 de imagini din care 1800 folosite la antrenare cu 10 epoci si un batch size de 200 am obtinut \ref{tab:resColor}.
+\begin{table}[h!]
+ 
+  \begin{center}
+    \caption{Culori}
+    \label{tab:resColor}
+    \begin{tabular}{c|c|c|c}
+      \textbf{Color} & \textbf{Accuracy} & \textbf{Precision} & \textbf{Recall} \\
+      \hline
+      rgb & 63\% & 0.75  & 0.62 \\
+      grayscale & 63\% & 0.75 & 0.62 \\
+      \end{tabular}
+  \end{center}
+\end{table}
+
+
+\subsubsection{Distanta K-Means}
+Urmatorul pas a fost stabilirea functiei de evaluare a distantei in algoritmul de clusterizare. Am luat in considerare 3 functii: 
+\begin{itemize}
+  \item Euclideana (implementarea din sklearn si din nltk)
+	\begin{equation*}
+	d = \sqrt{\sum_{1}^{n} {\left | x_{i} - y_{i} \right |}^2}
+	\end{equation*}
+  \item Manhattan (implementarea din nltk)
+	\begin{equation*}
+	d = \sum_{1}^{n} \left | x_{i} - y_{i} \right |
+	\end{equation*}
+  \item Cosinus (implementarea din nltk)
+	\begin{equation*}
+	d = \frac{\sum_{1}^{n} x_{i} y_{i}}{\sqrt{\sum_{1}^{n} {x_{i}}^2 } \sqrt{\sum_{1}^{n} {y_{i}}^2}}
+	\end{equation*}
+\end{itemize}
+
+Am folosit doua configurari pentru evaluarea acestor functii \ref{tab:configDist}.
+\begin{table}[h!]
+ 
+  \begin{center}
+    \caption{Configurari}
+    \label{tab:configDist}
+    \begin{tabular}{c|c|c|c|c}
+      \textbf{DataSize} & \textbf{TrainSize} & \textbf{TestSize} & \textbf{Epochs} & \textbf{BatchSize} \\
+      \hline
+      1000 & 900 & 100  & 10 & 100 \\
+      1600 & 1500 & 100 & 10 & 200 \\
+      \end{tabular}
+  \end{center}
+\end{table}
+
+Rezultatele se pot vedea in tabelul \ref{tab:resDist}. Cele mai bune rezultate le-am obtinut folosind distanta Cosinus.
+\begin{table}[h!]
+  \begin{center}
+    \caption{Configurari}
+    \label{tab:resDist}
+    \begin{tabular}{c|c|c|c}
+      \textbf{Configuration} & \textbf{Accuracy} & \textbf{Distance} & \textbf{Library} \\
+      \hline
+      1 & 54.60\% & Euclidean & sklearn \\
+      1 & 67\% & Cosine & nltk \\
+      1 & 60\% & Euclidean & nltk \\
+      1 & 54\% & Manhattan & nltk \\
+      2 & 45\% & Euclidean & sklearn \\
+      2 & 64\% & Cosine & nltk \\
+      2 & 45\% & Euclidean & nltk \\
+      2 & 65\% & Manhattan & nltk \\
+      \end{tabular}
+  \end{center}
+\end{table}
+
+
 
 \newpage
 \bibliography{bibliografie} 
