Added part of the powerpoint presentation

--- a/documentatie/proiect.tex
+++ b/documentatie/proiect.tex
@@ -82,13 +82,13 @@ In primul rand am incercat sa determin cea mai potrivita arhitectura pentru auto
   \begin{center}
     \caption{Arhitectura autoencoder}
     \label{tab:arh}
-    \begin{tabular}{c|c|c|c|c}
-      \textbf{ConvolutionLayers} & \textbf{Epochs} & \textbf{BatchSize} & \textbf{EncodingLoss} & \textbf{Accuracy}\\
+    \begin{tabular}{c|c|c}
+      \textbf{ConvolutionLayers} & \textbf{EncodingLoss} & \textbf{Accuracy}\\
       \hline
-      4 & 50 & 20 & 0.62 & 54\% \\
-      1 & 50 & 20 & 0.59 & 56\% \\
-      3 & 50 & 20 & 0.6 & 54\%  \\
-      1 & 50 & 50 & 0.58 & 55\% \\
+      1 & 0.59 & 56\% \\
+      1 & 0.58 & 55\% \\
+      3 & 0.6 & 54\%  \\
+      4 & 0.62 & 54\% \\
       \end{tabular}
   \end{center}
 \end{table}
