--- a/documentatie/bibliografie.bib
+++ b/documentatie/bibliografie.bib
@@ -73,3 +73,36 @@
   howpublished = {\url{https://www.kaggle.com/c/invasive-species-monitoring}},
   note = {Accessed: 2018-01-04}
 }
+
+@misc{WEBSITE:7,
+  title = {Vitex Rotundifolia},
+  howpublished = {\url{https://www.invasivespeciesinfo.gov/plants/beachvitex.shtml}},
+  note = {Accessed: 2018-01-08}
+}
+
+@misc{WEBSITE:8,
+  title = {Lionfish},
+  howpublished = {\url{https://www.anstaskforce.gov/spoc/lionfish.php}},
+  note = {Accessed: 2018-01-08}
+}
+
+@misc{WEBSITE:9,
+  title = {Chestnut blight},
+  howpublished = {\url{http://www.ct.gov/caes/cwp/view.asp?a=2815&q=376754}},
+  note = {Accessed: 2018-01-08}
+}
+
+@book{BOOK:3,
+    title={Studies in Plant Demography},
+    author={Mack, R. N.},
+    publisher={White (Academic, London)},
+    year={1985}
+}
+
+@ARTICLE{ARTICLE:5,
+    AUTHOR="Babbitt B.",
+    TITLE=" Statement by Secretary of the Interior on invasive
+alien species. Proceedings, National Weed Syposium, BLM
+Weed Page",
+    YEAR="1998",
+}
