Described the algorithms used

--- a/documentatie/bibliografie.bib
+++ b/documentatie/bibliografie.bib
@@ -106,3 +106,15 @@ alien species. Proceedings, National Weed Syposium, BLM
 Weed Page",
     YEAR="1998",
 }
+
+@misc{WEBSITE:10,
+  title = {K-means clustering},
+  howpublished = {\url{https://www.datascience.com/blog/k-means-clustering}},
+  note = {Accessed: 2018-01-08}
+}
+
+@misc{WEBSITE:11,
+  title = {An Intuitive Explanation of Convolutional Neural Networks},
+  howpublished = {\url{https://ujjwalkarn.me/2016/08/11/intuitive-explanation-convnets/}},
+  note = {Accessed: 2018-01-08}
+}
