--- a/documentatie/proiect.tex
+++ b/documentatie/proiect.tex
@@ -55,7 +55,11 @@ Primul pas consta in prelucrarea imaginilor de antrenament prin redimensionare s
 
 Un autoencoder este o retea neurala care seteaza valoarea de iesire ca fiind egala cu cea de intrare, deci incearca sa invete functia de identitate. Prin setarea unor constrangeri (dimensiuni reduse) algoritmul poate invata anumite caracteristici ale datelor\cite{BOOK:2}. In aceasta abordare am folosit un autoencoder bazat pe retele convolutive, format din mai multe straturi de convolutie, maxpooling si upsampling dispuse in ‘oglinda’. Modelul de codificare este un strat intermediar al autoencoderului.
 
-Modelul invatat de autoencoder e folosit pentru a extrage reprezentarea codificata a imaginilor, fiecare tablou extras de CNN reprezentand o caracteristica(feature). Aceste caracteristici sunt combinate intr-un singur tablou si folosite ca date de intrare pentru un algoritm de clusterizare (K-Means). Pentru a stabili daca etichetele generate de algoritmul nesupervizat corespund celor atasate imaginilor am comparat rezultatele cu un set de imagini de referinta alese de mana.
+Retelele convolutive sunt similare cu retelele neurale insa au o arhitectura bazata pe prezumtia ca datele de intrare vor fi imagini. Astfel algoritmul invata mai multe filtre care scaneaza bucati din imagine. Aplicand aceste filtre se obtin tablouri de convolutie. Maxpooling este o metoda de reducere a dimensiunii tablourilor de convolutie fara a pierde informatii importante. Operatia de Upsampling creste dimensiunea acestor tablouri repetand datele. Se pot combina mai multe dintre straturile anterioare dar ultimul strat consta dintr-un algoritm de clasificare pe baza caracteristicilor extrase\cite{WEBSITE:11}.
+
+Modelul invatat de autoencoder e folosit pentru a extrage reprezentarea codificata a imaginilor, fiecare tablou extras de CNN reprezentand o caracteristica(feature). Aceste caracteristici sunt combinate intr-un singur tablou si folosite ca date de intrare pentru un algoritm de clusterizare (K-means). Pentru a stabili daca etichetele generate de algoritmul nesupervizat corespund celor atasate imaginilor am comparat rezultatele cu un set de imagini de referinta alese de mana.
+
+K-means este un algoritm de invatare nesupervizata care gaseste grupuri in datele de intrare. Datele sunt grupate dupa similaritati intre caracteristicile lor. Algoritmul functioneaza in mod iterativ si asociaza punctele de date la unul din cei K centroizi. Centroizii sunt apoi mutati in functie de media punctelor asociate. Acesti pasi sunt repetati pana pozitia centroizilor nu se mai modifica. Numarul grupurilor este o constanta K, folosita ca data de intrare pentru algoritm. Algoritmul identifica pozitiile centroizilor si eticheteaza toate datele de intrare\cite{WEBSITE:10}.
 
 \section{Setul de date}
 Pentru acest proiect am folosit setul de date aferent competitiei Invasive Species Monitoring\cite{WEBSITE:6} de pe Kaggle. Acesta consta din 2295 de imagini etichetate manual. Imaginile au fost facute intr-o padure din Brazilia si o parte din ele contin specia invaziva Hydrangea. 1448 de imagini din setul total contin Hydrangea, deci 63\% din exemple sunt pozitive. Toate imaginile sunt color si au dimensiunea 866x1154 pixeli. Majoritatea imaginilor pozitive contin tufe de Hydrangea in centrul imaginii. Imaginile negative contin scene din padure, iar in unele apar lacuri sau oameni.Un exemplu de imagine pozitiva si negativa poate fi vazut in \ref{fig:posneg}.
